# kdev-css

./: .kde-ci.yml  CMakeLists.txt  Messages.sh  css.kdev4  csslanguagesupport.cpp  csslanguagesupport.h  debug.cpp  debug.h  kdev-css.kdev4  kdevcssresources.qrc  kdevcsssupport.categories  kdevcsssupport.desktop  kdevcsssupport.desktop.cmake  kdevcsssupport.json  parsejob.cpp  parsejob.h  version.h.cmake
completion/: CSS.xml  contentassistdata.cpp  contentassistdata.h  model.cpp  model.h
completion/test/: modeltest.cpp  modeltest.h
duchain/builders/: contextbuilder.cpp  contextbuilder.h  declarationbuilder.cpp  declarationbuilder.h
duchain/tests/: duchain.cpp  duchain.h  duchaintestbase.cpp  duchaintestbase.h  parsejobtest.cpp  parsejobtest.h
navigation/: colornavigationcontext.cpp  colornavigationcontext.h  fieldnavigationcontext.cpp  fieldnavigationcontext.h  navigationwidget.cpp  navigationwidget.h  valuenavigationcontext.cpp  valuenavigationcontext.h
parser/: CMakeLists.txt  css.g  editorintegrator.cpp  editorintegrator.h  htmlparser.cpp  htmlparser.h  main.cpp  maketokenizer  parserexport.h  parsesession.cpp  parsesession.h  tokenizer.cpp  tokenizer.flex  tokenizer.h
parser/test/: parsertest.cpp  parsertest.h  tokenizertest.cpp  tokenizertest.h
po/ar/: kdevcss.po
po/bs/: kdevcss.po
po/ca/: kdevcss.po
po/ca@valencia/: kdevcss.po
po/cs/: kdevcss.po
po/da/: kdevcss.po
po/de/: kdevcss.po
po/en_GB/: kdevcss.po
po/eo/: kdevcss.po
po/es/: kdevcss.po
po/et/: kdevcss.po
po/eu/: kdevcss.po
po/fi/: kdevcss.po
po/fr/: kdevcss.po
po/ga/: kdevcss.po
po/gl/: kdevcss.po
po/he/: kdevcss.po
po/hi/: kdevcss.po
po/hu/: kdevcss.po
po/it/: kdevcss.po
po/ja/: kdevcss.po
po/ka/: kdevcss.po
po/ko/: kdevcss.po
po/lt/: kdevcss.po
po/nds/: kdevcss.po
po/nl/: kdevcss.po
po/nn/: kdevcss.po
po/pl/: kdevcss.po
po/pt/: kdevcss.po
po/pt_BR/: kdevcss.po
po/ro/: kdevcss.po
po/ru/: kdevcss.po
po/sk/: kdevcss.po
po/sl/: kdevcss.po
po/sv/: kdevcss.po
po/tr/: kdevcss.po
po/ug/: kdevcss.po
po/uk/: kdevcss.po
po/zh_CN/: kdevcss.po
po/zh_TW/: kdevcss.po
